[#864] [cygnus-ngsi] [install_from_sources.md] Add 'Known issues' section